@@ -33,3 +33,15 @@ third_trackback:
   ip: 127.0.0.1
   created_at: 1999-01-01 01:00:00
   hidden: 1
+<% for i in 10..20 %>
+tb<%= i %>:
+  id: <%= i %>
+  article_id: <%= i %>
+  category_id: 1
+  blog_name: blog test trackback in fixture <%= i %>
+  title: tb trackback
+  excerpt: excerpt test tb in fixture <%= i %>
+  url: http://example.com/<%= i %>/valid_path.html
+  ip: 127.0.0.1
+  created_at: 1999-01-01 01:00:<%= i %>
+<% end %>
